--- a/_i18n/en/_posts/2021-08-26-省力安心的簡訊實聯制.md
+++ b/_i18n/en/_posts/2021-08-26-省力安心的簡訊實聯制.md
@@ -1,28 +1,29 @@
 ---
   layout: "post"
-  title: "Simple newsletter system that saves effort and peace of mind"
-  excerpt: "Data access must be based on personal data to make a difference."
+  title: "The Gold Standard: 1922 SMS"
+  excerpt: "Data can only be appropriately used if it’s appropriately sourced."
   image: "/assets/imgs/pinky-swear-329329_1280.jpg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "社會創新"
-    - "開放政府"
+    - "Social Innovation"
+    - "Open Government"
 ---
 
+After the 1922 SMS contact tracing system was released in May, it quickly became part of daily life in Taiwan. Using a smartphone's built-in camera without an additional app, the simple and easy sytem is now an intuitive habit for most people visiting public spaces.
 
-Since its launch in May, the newsletter system has quickly become a part of the lives of Taiwanese. There is no need to install a new App, just scan the QR Code and send a short message, so that recording footprints through mobile phones has become an intuitive habit for most people when they enter and exit public places. 
+Data collected via 1922 SMS is stored by the telecommunications provider corresponding to each individual smartphone number. This begs the question: How is this data used appropriately for the purposes of contact tracing whilst also guaranteeing information security? For this reason, Taiwan's Central Epidemic Command Center has created a "Contact Tracing Assistance Platform" that can be used by front-line contact tracing staff to rapidly grasp the projected scope of impact for any outbreak. This platform contains a number of tools, including an integrated heat map, a contact tracing trajectory, and 1922 SMS records for contact tracing inquiries.
 
-The information obtained by the SMS system is stored in the telecommunications company to which each person's mobile phone number belongs. How can this information be properly used in the epidemic investigation work while ensuring the safety of personal information? To this end, the command center has built an "epidemic investigation assistance platform" that integrates functions such as hot spot maps, epidemic investigation trajectories, and short-message system and epidemic investigation inquiry, so that front-line epidemic investigation personnel can quickly grasp the possible impact of the epidemic. 
+Contact tracing staff routinely need to conduct inquiries relating to the digital footprint of specific cell phone numbers in order to assess the projected scope of an outbreak. The [1922 SMS - Access record inquiries service](https://sms.1922.gov.tw) is an example of how the public can check whether their data is being used appropriately. They simply need to visit the website, authenticate with their smartphone number to review the associated registration records and see if the data has been accessed by contact tracing staff within the previous 28 days.
 
-Take the [Public Information Access Record Query Service](https://sms.1922.gov.tw) under the SMS system as an example, because the epidemic investigators often need to check the footprint of a specific door number to confirm The scope of the epidemic may be affected. In order to let the public know whether their footprints are being used properly, they only need to enter the webpage and pass the mobile phone number authentication under their name, and then they can check the actual record of this number and whether they have been interrogated by the epidemic investigation personnel in the past 28 days. read. 
+A point to note is that when contact tracing staff submit an application to inquire about a specific number, the application for data records is submitted to the associated telecommunications service provider via the "Contact Tracing Assistance Platform." Once the check-in records are obtained, they can only be accessed online and never saved. The platform's database can only make a record of which contact tracing unit, at what time, checked the cell phone number. After 28 days, the records are deleted in its entirety.
 
-It is worth noting that when an epidemic investigator applies for a specific door number, he applies for the track record of that door number through the epidemic investigation assistance platform. After the record is obtained, it can only be checked, and the track record will not be kept. On the platform, the database of the epidemic investigation auxiliary platform will only record "which unit's epidemic investigation personnel checked when a certain mobile phone number". After 28 days, all these inquiry records will be deleted. 
+The key here is embodying the principle of open government: Accountability. 
 
-The focus of this approach is to reflect the core concept of open government: to give accountability. 
+Furthermore, when new challenges arise, we can also respond with timely improvements. In June, data from 1922 SMS records was discovered by a judge assessing police search warrant applications. Concerned with the legality of wiretapping 1922 SMS, the judge questioned this use publicly.
 
-On the other hand, when new challenges arise, we also improve in time. In June, when a judge was reviewing the criminal police station's search for ticket applications, he found that there were information on the short message system in the certificate, so he submitted the book to the newspaper and questioned its legitimacy. After discussion by all parties, the Ministry of Justice also explained: the SMS system is not a private communication, and it is not within the scope of access or monitoring by the Communication Security Supervision Law; telecommunications institutions and judicial organs will also take specific measures to exclude communication surveillance from touching the SMS communication. System of information. 
+Following discussions, the Ministry of Justice concluded that the 1922 SMS does not constitute a private communication and should not be accessed as per the Communication Security and Surveillance Act. Mobile network operators and judicial authorities are now preparing measures to rule out 1922 SMS from law enforcement surveillance.
 
-In the development of digital policy, personal information protection and information security have always been the focus of attention. In Taiwan, in addition to strictly restricting the scope of data use, we also allow the public to inquire about their own data. Collecting information from a personal perspective and focusing on citizen autonomy is the core concept of digital development: "Data access must be based on the basis for personal data to make a difference." 
+When developing digital policies, cybersecurity and personal data protection consistently receive a great deal of attention. In Taiwan, aside from maintaining strict control over the scope of data use, we have also opened channels for the public to make inquiries concerning their own data. In this way, data is collected with citizens in mind, with citizens empowerment at its heart. This really is the core philosophy of our digital development: Data can only be used appropriately if appropriately sourced.
 
-Collect information in a convenient and safe way, and adhere to the principle of "give an account" when using information. Taiwan not only demonstrates what is time-saving and labor-saving and reassuring digital innovation, but also writes for the practice of digital epidemic prevention. Next milestone. 
+Through collecting data via simple and secure methods, whilst using data with strict adherence to the principles of accountability, Taiwan demonstrates the meaning of efficient and popular digital innovations, as well as achieves a new milestone in digital epidemic control.
