--- a/_i18n/en/_posts/2021-08-26-省力安心的簡訊實聯制.md
+++ b/_i18n/en/_posts/2021-08-26-省力安心的簡訊實聯制.md
@@ -24,6 +24,6 @@ Furthermore, when new challenges arise, we can also respond with timely improvem
 
 Following discussions, the Ministry of Justice concluded that the 1922 SMS does not constitute a private communication and should not be accessed as per the Communication Security and Surveillance Act. Mobile network operators and judicial authorities are now preparing measures to rule out 1922 SMS from law enforcement surveillance.
 
-When developing digital policies, cybersecurity and personal data protection consistently receive a great deal of attention. In Taiwan, aside from maintaining strict control over the scope of data use, we have also opened channels for the public to make inquiries concerning their own data. In this way, data is collected with citizens in mind, with citizens empowerment at its heart. This really is the core philosophy of our digital development: Data can only be used appropriately if appropriately sourced.
+When developing digital policies, cybersecurity and personal data protection consistently receive a great deal of attention. In Taiwan, aside from maintaining strict control over the scope of data use, we have also opened channels for the public to make inquiries concerning their own data. In this way, data is collected with citizens in mind, with citizens empowerment at its heart. This really is the core philosophy of our digital development: Data can only be appropriately used if it's appropriately sourced.
 
 Through collecting data via simple and secure methods, whilst using data with strict adherence to the principles of accountability, Taiwan demonstrates the meaning of efficient and popular digital innovations, as well as achieves a new milestone in digital epidemic control.
