update url for ray project

--- a/_i18n/zh-TW/_posts/project/2017-09-10-ray2017.md
+++ b/_i18n/zh-TW/_posts/project/2017-09-10-ray2017.md
@@ -46,10 +46,8 @@ PDIS 小組期待，透過此實驗性計畫，導入「使用者體驗」的思
 
 ## 相關文件
 
-- [RAY 2019 官方網站](https://ray.pdis.nat.gov.tw/){:target="_blank"}
-
-- [RAY 2018 官方網站](http://ray2018.pdis.tw/){:target="_blank"}
-
+- [RAY 2020 官方網站](https://ray2020.pdis.nat.gov.tw/){:target="_blank"}
+- [RAY 2019 官方網站](https://ray2019.pdis.nat.gov.tw/){:target="_blank"}
+- [RAY 2018 官方網站](https://ray2018.pdis.tw/){:target="_blank"}
 - [RAY 2017 官方網站](https://ray2017.pdis.nat.gov.tw/){:target="_blank"}
-
-- [RAY 計畫概要](https://docs.google.com/document/d/1frpciBMwBz0SjOfoB6DIukM6OR3slcpfINa6PevCJtk/){:target="_blank"}
+- [RAY 計畫概要](https://docs.google.com/document/d/1frpcibmwbz0sjofob6diukm6or3slcpfina6pevcjtk/){:target="_blank" }
