--- a/_i18n/en/_posts/project/2017-09-10-ray2017.md
+++ b/_i18n/en/_posts/project/2017-09-10-ray2017.md
@@ -48,10 +48,8 @@ To facilitate remote work, the PDIS team and the trainee use the communication s
 
 ## Reference
 
-- [RAY 2019 official website](https://ray.pdis.nat.gov.tw/){:target="_blank"}
-
-- [RAY 2018 official website](http://ray2018.pdis.tw/){:target="_blank"}
-
+- [RAY 2020 official website](https://ray2020.pdis.nat.gov.tw/){:target="_blank"}
+- [RAY 2019 official website](https://ray2019.pdis.nat.gov.tw/){:target="_blank"}
+- [RAY 2018 official website](https://ray2018.pdis.tw/){:target="_blank"}
 - [RAY 2017 official website](https://ray2017.pdis.nat.gov.tw/){:target="_blank"}
-
 - [RAY Project Summary](https://docs.google.com/document/d/1frpcibmwbz0sjofob6diukm6or3slcpfina6pevcjtk/){:target="_blank" }
