--- a/_i18n/zh-TW/_posts/project/2020-11-17-ray2020.md
+++ b/_i18n/zh-TW/_posts/project/2020-11-17-ray2020.md
@@ -66,7 +66,7 @@ Ray 4.0 召集全國具有設計及資訊專長的青年學子一同加入我們
   <div class="slides-wrapper">
     <div class="slides" style="--slides-num:7; left: calc(0%);">
       <div class="project-card">
-        <div class="preview" style="background-image: url(&quot;https://ray.pdis.nat.gov.tw/_nuxt/img/preview.e4a67c5.jpg&quot;);"></div>
+        <div class="preview" style="background-image: url(&quot;https://ray2020.pdis.nat.gov.tw/_nuxt/img/preview.e4a67c5.jpg&quot;);"></div>
         <div class="card-body">
           <h2 class="card-title">臺北市民服務大平台，<br>從場地租用看見市民痛點。</h2>
           <div class="card-content">
@@ -84,25 +84,25 @@ Ray 4.0 召集全國具有設計及資訊專長的青年學子一同加入我們
               歡迎點擊下方的「查看更多」，瞭解團隊如何進行改造！
             </p> <label class="tag">地方政府網站</label><label class="tag">市民服務</label>
             <div class="members">
-              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/f58c1efd1a4a4fcf77e3cf380be5058d.0bfe91e.jpg" alt="李彤"
+              <div class="avatar"><img src="https://ray2020.pdis.nat.gov.tw/_nuxt/img/f58c1efd1a4a4fcf77e3cf380be5058d.0bfe91e.jpg" alt="李彤"
                   class="rounded-circle">
                 <p class="name">
                   李彤
                 </p>
               </div>
-              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/c721bd7a59482ef12f0229c130801073.8f479a7.jpg" alt="孫若盈"
+              <div class="avatar"><img src="https://ray2020.pdis.nat.gov.tw/_nuxt/img/c721bd7a59482ef12f0229c130801073.8f479a7.jpg" alt="孫若盈"
                   class="rounded-circle">
                 <p class="name">
                   孫若盈
                 </p>
               </div>
-              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/e74d65d26d16a9954bd294e6a8744cfe.ba786e9.jpg" alt="李佩芸"
+              <div class="avatar"><img src="https://ray2020.pdis.nat.gov.tw/_nuxt/img/e74d65d26d16a9954bd294e6a8744cfe.ba786e9.jpg" alt="李佩芸"
                   class="rounded-circle">
                 <p class="name">
                   李佩芸
                 </p>
               </div>
-              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/2fd36c4c20bbe0a7e1b9783fc0c90388.c40cc2a.jpg" alt="張硯涵"
+              <div class="avatar"><img src="https://ray2020.pdis.nat.gov.tw/_nuxt/img/2fd36c4c20bbe0a7e1b9783fc0c90388.c40cc2a.jpg" alt="張硯涵"
                   class="rounded-circle">
                 <p class="name">
                   張硯涵
@@ -110,11 +110,11 @@ Ray 4.0 召集全國具有設計及資訊專長的青年學子一同加入我們
               </div>
             </div>
           </div>
-          <div class="card-action"><a href="https://ray.pdis.nat.gov.tw/taipei_service/" class="button">看更多</a></div>
+          <div class="card-action"><a href="https://ray2020.pdis.nat.gov.tw/taipei_service/" class="button">看更多</a></div>
         </div>
       </div>
       <div class="project-card">
-        <div class="preview" style="background-image: url(&quot;https://ray.pdis.nat.gov.tw/_nuxt/img/preview.192916d.jpg&quot;);"></div>
+        <div class="preview" style="background-image: url(&quot;https://ray2020.pdis.nat.gov.tw/_nuxt/img/preview.192916d.jpg&quot;);"></div>
         <div class="card-body">
           <h2 class="card-title">基隆市政府全球資訊網，<br>打造不迷路的整合式入口網。</h2>
           <div class="card-content">
@@ -132,25 +132,25 @@ Ray 4.0 召集全國具有設計及資訊專長的青年學子一同加入我們
               歡迎點擊下方的「查看更多」，瞭解團隊如何進行改造！
             </p> <label class="tag">地方政府網站</label><label class="tag">市民服務</label>
             <div class="members">
-              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/372b73220f6d737c49d4ddf43b33cfb8.f302b6f.jpg" alt="翁瑞宏"
+              <div class="avatar"><img src="https://ray2020.pdis.nat.gov.tw/_nuxt/img/372b73220f6d737c49d4ddf43b33cfb8.f302b6f.jpg" alt="翁瑞宏"
                   class="rounded-circle">
                 <p class="name">
                   翁瑞宏
                 </p>
               </div>
-              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/2eae57d108485d76fea49e98944eeba5.e8c1672.jpg" alt="楊郁如"
+              <div class="avatar"><img src="https://ray2020.pdis.nat.gov.tw/_nuxt/img/2eae57d108485d76fea49e98944eeba5.e8c1672.jpg" alt="楊郁如"
                   class="rounded-circle">
                 <p class="name">
                   楊郁如
                 </p>
               </div>
-              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/07fd0ae03cf725d89c4b36517b8fcf21.b491c37.jpg" alt="潘躍升"
+              <div class="avatar"><img src="https://ray2020.pdis.nat.gov.tw/_nuxt/img/07fd0ae03cf725d89c4b36517b8fcf21.b491c37.jpg" alt="潘躍升"
                   class="rounded-circle">
                 <p class="name">
                   潘躍升
                 </p>
               </div>
-              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/7709ee7e1a2ad3e2b6937dd5b8ba3aa3.00c1a7c.jpg" alt="吳育葦"
+              <div class="avatar"><img src="https://ray2020.pdis.nat.gov.tw/_nuxt/img/7709ee7e1a2ad3e2b6937dd5b8ba3aa3.00c1a7c.jpg" alt="吳育葦"
                   class="rounded-circle">
                 <p class="name">
                   吳育葦
@@ -158,11 +158,11 @@ Ray 4.0 召集全國具有設計及資訊專長的青年學子一同加入我們
               </div>
             </div>
           </div>
-          <div class="card-action"><a href="https://ray.pdis.nat.gov.tw/klcg/" class="button">看更多</a></div>
+          <div class="card-action"><a href="https://ray2020.pdis.nat.gov.tw/klcg/" class="button">看更多</a></div>
         </div>
       </div>
       <div class="project-card">
-        <div class="preview" style="background-image: url(&quot;https://ray.pdis.nat.gov.tw/_nuxt/img/preview.9fa2fe5.jpg&quot;);"></div>
+        <div class="preview" style="background-image: url(&quot;https://ray2020.pdis.nat.gov.tw/_nuxt/img/preview.9fa2fe5.jpg&quot;);"></div>
         <div class="card-body">
           <h2 class="card-title">教育部青年署官網，<br>讓好活動能被更多青年學子看見。</h2>
           <div class="card-content">
@@ -180,25 +180,25 @@ Ray 4.0 召集全國具有設計及資訊專長的青年學子一同加入我們
               歡迎點擊下方的「查看更多」，瞭解團隊如何進行改造！
             </p> <label class="tag">中央政府網站</label><label class="tag">就學</label>
             <div class="members">
-              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/e1fe25cd70f6c184828b35d3255fa409.98a3a38.jpg"
+              <div class="avatar"><img src="https://ray2020.pdis.nat.gov.tw/_nuxt/img/e1fe25cd70f6c184828b35d3255fa409.98a3a38.jpg"
                   alt="黃采媛" class="rounded-circle" width="1" height="1">
                 <p class="name">
                   黃采媛
                 </p>
               </div>
-              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/a918c31616b10ce784663f41af04861c.5e371b7.jpg"
+              <div class="avatar"><img src="https://ray2020.pdis.nat.gov.tw/_nuxt/img/a918c31616b10ce784663f41af04861c.5e371b7.jpg"
                   alt="蔡蕙羽" class="rounded-circle" width="1" height="1">
                 <p class="name">
                   蔡蕙羽
                 </p>
               </div>
-              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/bf76689e20c87a995b7a6a98ac7702ea.2614e80.jpg"
+              <div class="avatar"><img src="https://ray2020.pdis.nat.gov.tw/_nuxt/img/bf76689e20c87a995b7a6a98ac7702ea.2614e80.jpg"
                   alt="簡巧恩" class="rounded-circle" width="1" height="1">
                 <p class="name">
                   簡巧恩
                 </p>
               </div>
-              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/b4d6ac48e7731791d8dbab90324250a0.f0c81e1.jpg"
+              <div class="avatar"><img src="https://ray2020.pdis.nat.gov.tw/_nuxt/img/b4d6ac48e7731791d8dbab90324250a0.f0c81e1.jpg"
                   alt="羅宛庭" class="rounded-circle" width="1" height="1">
                 <p class="name">
                   羅宛庭
@@ -206,11 +206,11 @@ Ray 4.0 召集全國具有設計及資訊專長的青年學子一同加入我們
               </div>
             </div>
           </div>
-          <div class="card-action"><a href="https://ray.pdis.nat.gov.tw/yda/" class="button">看更多</a></div>
+          <div class="card-action"><a href="https://ray2020.pdis.nat.gov.tw/yda/" class="button">看更多</a></div>
         </div>
       </div>
       <div class="project-card">
-        <div class="preview" style="background-image: url(&quot;https://ray.pdis.nat.gov.tw/_nuxt/img/preview.a471a12.jpg&quot;);"></div>
+        <div class="preview" style="background-image: url(&quot;https://ray2020.pdis.nat.gov.tw/_nuxt/img/preview.a471a12.jpg&quot;);"></div>
         <div class="card-body">
           <h2 class="card-title">勞動部勞工保險局e化服務系統，<br>讓退休人士也能安心使用。</h2>
           <div class="card-content">
@@ -228,25 +228,25 @@ Ray 4.0 召集全國具有設計及資訊專長的青年學子一同加入我們
               歡迎點擊下方的「查看更多」，瞭解團隊如何進行改造！
             </p> <label class="tag">中央政府網站</label><label class="tag">就業</label>
             <div class="members">
-              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/926b3ab0ab0d98d8dfc2d8949d198f1c.e341289.jpg"
+              <div class="avatar"><img src="https://ray2020.pdis.nat.gov.tw/_nuxt/img/926b3ab0ab0d98d8dfc2d8949d198f1c.e341289.jpg"
                   alt="林暖婷" class="rounded-circle" width="1" height="1">
                 <p class="name">
                   林暖婷
                 </p>
               </div>
-              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/be1283eb4e70599e1b62abff61f92787.3fab5ef.jpg"
+              <div class="avatar"><img src="https://ray2020.pdis.nat.gov.tw/_nuxt/img/be1283eb4e70599e1b62abff61f92787.3fab5ef.jpg"
                   alt="賴玨澄" class="rounded-circle" width="1" height="1">
                 <p class="name">
                   賴玨澄
                 </p>
               </div>
-              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/d81d0857345ccbc83f52b586cc1d81e2.ec3cee2.jpg"
+              <div class="avatar"><img src="https://ray2020.pdis.nat.gov.tw/_nuxt/img/d81d0857345ccbc83f52b586cc1d81e2.ec3cee2.jpg"
                   alt="徐遠志" class="rounded-circle" width="1" height="1">
                 <p class="name">
                   徐遠志
                 </p>
               </div>
-              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/2d5f14997ef4b5d7d61f420114ed9c35.4b237f2.jpg"
+              <div class="avatar"><img src="https://ray2020.pdis.nat.gov.tw/_nuxt/img/2d5f14997ef4b5d7d61f420114ed9c35.4b237f2.jpg"
                   alt="黃炳儒" class="rounded-circle" width="1" height="1">
                 <p class="name">
                   黃炳儒
@@ -254,11 +254,11 @@ Ray 4.0 召集全國具有設計及資訊專長的青年學子一同加入我們
               </div>
             </div>
           </div>
-          <div class="card-action"><a href="https://ray.pdis.nat.gov.tw/edesk_bli/" class="button">看更多</a></div>
+          <div class="card-action"><a href="https://ray2020.pdis.nat.gov.tw/edesk_bli/" class="button">看更多</a></div>
         </div>
       </div>
       <div class="project-card">
-        <div class="preview" style="background-image: url(&quot;https://ray.pdis.nat.gov.tw/_nuxt/img/preview.9522ab9.jpg&quot;);"></div>
+        <div class="preview" style="background-image: url(&quot;https://ray2020.pdis.nat.gov.tw/_nuxt/img/preview.9522ab9.jpg&quot;);"></div>
         <div class="card-body">
           <h2 class="card-title">臺中市政府社會局，<br>兼顧民眾和業務同仁需求的再設計。</h2>
           <div class="card-content">
@@ -276,25 +276,25 @@ Ray 4.0 召集全國具有設計及資訊專長的青年學子一同加入我們
               歡迎點擊下方的「查看更多」，瞭解團隊如何進行改造！
             </p> <label class="tag">地方政府網站</label><label class="tag">社會福利</label>
             <div class="members">
-              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/5d31e0a125991d73aa61e5fc86d7dd35.6aa1211.jpg"
+              <div class="avatar"><img src="https://ray2020.pdis.nat.gov.tw/_nuxt/img/5d31e0a125991d73aa61e5fc86d7dd35.6aa1211.jpg"
                   alt="張詩菱" class="rounded-circle" width="1" height="1">
                 <p class="name">
                   張詩菱
                 </p>
               </div>
-              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/67670b2ac9b675f3542886af828035d7.dc8d0ac.jpg"
+              <div class="avatar"><img src="https://ray2020.pdis.nat.gov.tw/_nuxt/img/67670b2ac9b675f3542886af828035d7.dc8d0ac.jpg"
                   alt="楊博智" class="rounded-circle" width="1" height="1">
                 <p class="name">
                   楊博智
                 </p>
               </div>
-              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/dc4210679b05104ece79be7c35d6d419.a88654a.jpg"
+              <div class="avatar"><img src="https://ray2020.pdis.nat.gov.tw/_nuxt/img/dc4210679b05104ece79be7c35d6d419.a88654a.jpg"
                   alt="黃凡澔" class="rounded-circle" width="1" height="1">
                 <p class="name">
                   黃凡澔
                 </p>
               </div>
-              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/7210552012e0530ea278996643c5c263.05693eb.jpg"
+              <div class="avatar"><img src="https://ray2020.pdis.nat.gov.tw/_nuxt/img/7210552012e0530ea278996643c5c263.05693eb.jpg"
                   alt="何瑜萱" class="rounded-circle" width="1" height="1">
                 <p class="name">
                   何瑜萱
@@ -302,11 +302,11 @@ Ray 4.0 召集全國具有設計及資訊專長的青年學子一同加入我們
               </div>
             </div>
           </div>
-          <div class="card-action"><a href="https://ray.pdis.nat.gov.tw/taichung_society/" class="button">看更多</a></div>
+          <div class="card-action"><a href="https://ray2020.pdis.nat.gov.tw/taichung_society/" class="button">看更多</a></div>
         </div>
       </div>
       <div class="project-card">
-        <div class="preview" style="background-image: url(&quot;https://ray.pdis.nat.gov.tw/_nuxt/img/preview.445ae18.jpg&quot;);"></div>
+        <div class="preview" style="background-image: url(&quot;https://ray2020.pdis.nat.gov.tw/_nuxt/img/preview.445ae18.jpg&quot;);"></div>
         <div class="card-body">
           <h2 class="card-title">臺北市立聯合醫院，<br>在專業與易用間探索網路掛號的設計可能。</h2>
           <div class="card-content">
@@ -324,31 +324,31 @@ Ray 4.0 召集全國具有設計及資訊專長的青年學子一同加入我們
               歡迎點擊下方的「查看更多」，瞭解團隊如何進行改造！
             </p> <label class="tag">地方政府網站</label><label class="tag">醫療</label>
             <div class="members">
-              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/35194933009b376b78f73243f45ce528.a69008b.jpg"
+              <div class="avatar"><img src="https://ray2020.pdis.nat.gov.tw/_nuxt/img/35194933009b376b78f73243f45ce528.a69008b.jpg"
                   alt="賴逸丞" class="rounded-circle" width="1" height="1">
                 <p class="name">
                   賴逸丞
                 </p>
               </div>
-              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/d51c8ee8abaf285e7b99e0443bd485ad.7821be4.jpg"
+              <div class="avatar"><img src="https://ray2020.pdis.nat.gov.tw/_nuxt/img/d51c8ee8abaf285e7b99e0443bd485ad.7821be4.jpg"
                   alt="彭泰維" class="rounded-circle" width="1" height="1">
                 <p class="name">
                   彭泰維
                 </p>
               </div>
-              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/c1aa309d835a537071fde99c4ba31c25.cf2cd6b.jpg"
+              <div class="avatar"><img src="https://ray2020.pdis.nat.gov.tw/_nuxt/img/c1aa309d835a537071fde99c4ba31c25.cf2cd6b.jpg"
                   alt="龔俐霏" class="rounded-circle" width="1" height="1">
                 <p class="name">
                   龔俐霏
                 </p>
               </div>
-              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/e4fd07b8ee111ebb9eb4a1f9ef0b1985.f0f58a6.jpg"
+              <div class="avatar"><img src="https://ray2020.pdis.nat.gov.tw/_nuxt/img/e4fd07b8ee111ebb9eb4a1f9ef0b1985.f0f58a6.jpg"
                   alt="林瀚軒" class="rounded-circle" width="1" height="1">
                 <p class="name">
                   林瀚軒
                 </p>
               </div>
-              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/3d1414b0a0db8f52af1e7aecf7c61ede.55bcdab.jpg"
+              <div class="avatar"><img src="https://ray2020.pdis.nat.gov.tw/_nuxt/img/3d1414b0a0db8f52af1e7aecf7c61ede.55bcdab.jpg"
                   alt="翁暄奇" class="rounded-circle" width="1" height="1">
                 <p class="name">
                   翁暄奇
@@ -356,11 +356,11 @@ Ray 4.0 召集全國具有設計及資訊專長的青年學子一同加入我們
               </div>
             </div>
           </div>
-          <div class="card-action"><a href="https://ray.pdis.nat.gov.tw/tpech/" class="button">看更多</a></div>
+          <div class="card-action"><a href="https://ray2020.pdis.nat.gov.tw/tpech/" class="button">看更多</a></div>
         </div>
       </div>
       <div class="project-card">
-        <div class="preview" style="background-image: url(&quot;https://ray.pdis.nat.gov.tw/_nuxt/img/preview.7092f27.jpg&quot;);"></div>
+        <div class="preview" style="background-image: url(&quot;https://ray2020.pdis.nat.gov.tw/_nuxt/img/preview.7092f27.jpg&quot;);"></div>
         <div class="card-body">
           <h2 class="card-title">臺灣就業通，<br>從就業服務處探見服務的改造潛力。</h2>
           <div class="card-content">
@@ -378,25 +378,25 @@ Ray 4.0 召集全國具有設計及資訊專長的青年學子一同加入我們
               歡迎點擊下方的「查看更多」，瞭解團隊如何進行改造！
             </p> <label class="tag">中央政府網站</label><label class="tag">就業</label>
             <div class="members">
-              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/e7af6208057befcb7f00ea7a8b772b3e.459f663.jpg"
+              <div class="avatar"><img src="https://ray2020.pdis.nat.gov.tw/_nuxt/img/e7af6208057befcb7f00ea7a8b772b3e.459f663.jpg"
                   alt="賴彥汝" class="rounded-circle" width="1" height="1">
                 <p class="name">
                   賴彥汝
                 </p>
               </div>
-              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/03d1860a9f75637a1871d1ce5f889816.099b789.jpg"
+              <div class="avatar"><img src="https://ray2020.pdis.nat.gov.tw/_nuxt/img/03d1860a9f75637a1871d1ce5f889816.099b789.jpg"
                   alt="羅敏" class="rounded-circle" width="1" height="1">
                 <p class="name">
                   羅敏
                 </p>
               </div>
-              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/3d4c1de69c770f0e32411b8555d3b63f.c03d2c0.jpg"
+              <div class="avatar"><img src="https://ray2020.pdis.nat.gov.tw/_nuxt/img/3d4c1de69c770f0e32411b8555d3b63f.c03d2c0.jpg"
                   alt="李安峻" class="rounded-circle" width="1" height="1">
                 <p class="name">
                   李安峻
                 </p>
               </div>
-              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/d647382201a9a1fa0ae98a10030fdaf9.ed21ed9.jpg"
+              <div class="avatar"><img src="https://ray2020.pdis.nat.gov.tw/_nuxt/img/d647382201a9a1fa0ae98a10030fdaf9.ed21ed9.jpg"
                   alt="李欣儒" class="rounded-circle" width="1" height="1">
                 <p class="name">
                   李欣儒
@@ -404,7 +404,7 @@ Ray 4.0 召集全國具有設計及資訊專長的青年學子一同加入我們
               </div>
             </div>
           </div>
-          <div class="card-action"><a href="https://ray.pdis.nat.gov.tw/taiwan_jobs/" class="button">看更多</a></div>
+          <div class="card-action"><a href="https://ray2020.pdis.nat.gov.tw/taiwan_jobs/" class="button">看更多</a></div>
         </div>
       </div>
     </div>
@@ -650,7 +650,7 @@ function changeSlidesStyle() {
 
 雖然實習計畫才剛結束，我們已經收到許多機關正面的回饋，有些機關雖然已經將服務發包，但同學們的成果讓他們在面對廠商時能更有系統的討論，將同學們的成果納入廠商的實作，進行一定程度的修改。另外，我們也很開心聽到基隆市政府、教育部青年署、以及台灣就業通預計在2021年進行官網的改版，屆時將納入同學們的成果並邀請同學們一同來與廠商進行協作。當然，現在定調成果還太早，我們也會持續追蹤各部會的改版進程，透過每一次的回饋及觀察到的問題來讓下一次的Ray更好！
 
-PDIS 也將同學們精彩的成果全部公布在網路上，有興趣的朋友們歡迎至[Ray成果網站](https://ray.pdis.nat.gov.tw/)觀看每一組同學們兩個月來精彩的服務設計改造全記錄！
+PDIS 也將同學們精彩的成果全部公布在網路上，有興趣的朋友們歡迎至[Ray成果網站](https://ray2020.pdis.nat.gov.tw/)觀看每一組同學們兩個月來精彩的服務設計改造全記錄！
 
 
 
