--- a/_posts/2021-08-26-省力安心的簡訊實聯制.md
+++ b/_posts/2021-08-26-省力安心的簡訊實聯制.md
@@ -20,7 +20,7 @@ tags:
 
 這個做法的重點，在於體現開放政府的核心理念：給出交代（Accountability）。
 
-另一方面，在出現新的挑戰時，我們也及時改善。6 月時，有位法官在審核刑事警察局搜索票聲請書時，發現卷證出現簡訊實聯制的資料，於是投書報紙，質疑其合法性。經過各方討論後，法務部也作出解釋：簡訊實聯制不是私人通訊，不在通訊保障監察法調取或監聽的範圍；電信機構及司法機關也將採取具體措施，排除通訊監察觸及簡訊實聯制的資料。
+另一方面，在出現新的挑戰時，我們也及時改善。6 月時，有位法官在審核刑事警察局搜索票聲請書時，發現卷證出現簡訊實聯制的資料，於是投書報紙，質疑其合法性。經過各方討論後，法務部也[作出解釋](https://issuu.com/pdis.tw/docs/a11000000f_11004521780a0c_?e=30178544/87054578)：簡訊實聯制不是私人通訊，不在通訊保障監察法調取或監聽的範圍；電信機構及司法機關也將採取具體措施，排除通訊監察觸及簡訊實聯制的資料。
 
 數位政策發展中，個資保護和資通安全一向是備受矚目的重點。在臺灣，我們除了嚴格限制資料的使用範圍，也開放民眾查詢自己資料。這樣從個人角度收集資料、而以公民自主權為中心的做法，更是數位發展的核心理念：「資料取用必須有所本，個人數據才能有所為」。
 
