* link to interpretation

--- a/_i18n/zh-TW/_posts/2021-08-21-智慧國家-創新-包容-永續.md
+++ b/_i18n/zh-TW/_posts/2021-08-21-智慧國家-創新-包容-永續.md
@@ -36,7 +36,7 @@ tags:
 
 這項理念的重點，在於數位創新不僅要省時省力，而且要讓人安心，不因數位化而去侵害個人的隱私。數位發展中，個資保護、資通安全愈來愈受到重視，就是這個道理。
 
-另一方面，當新的挑戰發生時，我們也必須及時改善。比如後來有位法官，在刑事偵查程序，發現卷證出現簡訊實聯制的資料，質疑其合法性。經過各方討論後，法務部也解釋：簡訊實聯制不是私人通訊，不在通訊保障監察法調取或監聽的範圍；電信機構及司法機關也將採取具體措施，排除通訊監察觸及簡訊實聯制的資料。
+另一方面，當新的挑戰發生時，我們也必須及時改善。比如後來有位法官，在刑事偵查程序，發現卷證出現簡訊實聯制的資料，質疑其合法性。經過各方討論後，[法務部也解釋](https://issuu.com/pdis.tw/docs/a11000000f_11004521780a0c_?e=30178544/87054578)：簡訊實聯制不是私人通訊，不在通訊保障監察法調取或監聽的範圍；電信機構及司法機關也將採取具體措施，排除通訊監察觸及簡訊實聯制的資料。
 
 「對齊價值、給出交代」做為國家數位發展的策略，不僅消除疑慮，讓人安心，更積極實現公民夥伴關係的成果。例如今年邁入第四屆的總統盃黑客松，無論是社會部門、治理部門、經濟部門，都可以在此一起發想創新的方法，跨領域串聯資料，運用數位科技、解決社會問題。總統盃黑客松並不提供獎金，但獲獎的團隊，總統允諾政府會全力推動、納入政策措施。更有團隊在政府協助下，找到商業應用的機會。
 
