Fix image syntax

--- a/_i18n/en/_posts/2021-09-07-風傳媒：時間管理也是一種自主學習.md
+++ b/_i18n/en/_posts/2021-09-07-風傳媒：時間管理也是一種自主學習.md
@@ -24,8 +24,10 @@ However, the collaborative meeting must go one step further and ask the "core qu
  
 Based on this, the National Education Department asked the National Health Institute for help to explain the causes and effects of adolescents’ sleep based on empirical data. The briefing of the National Health Institute presents two main points: 1. The recommended amount of sleep for adolescents and adults is indeed different. The recommended amount for adolescents from 14 to 17 years old is 8-10 hours, and for 18 to 64 years old, it is reduced to 7-9 hours. 2. It is normal for adolescents to be awake at night and sleepy during the day due to the physiological factors of "delayed sleep cycle". This means that when discussing issues, if we say that students are lazy if they can't wake up in the morning, and that they love to go to bed late, it is not fair. 
 
-/assets/imgs/5f33aa5426fc726f7ed98217ff4d08f3b3ea0b93.jpeg
-Adolescent sleep delay diagram (taken from the briefing of the National Health Service)
+<figure>
+  <img src="/assets/imgs/5f33aa5426fc726f7ed98217ff4d08f3b3ea0b93.jpeg">
+  <figcaption>Adolescent sleep delay diagram (taken from the briefing of the National Health Service)</figcaption>
+</figure>
 
 In addition, the competent authority of the middle school is the local government, and the National Education Administration is based on its power and responsibility. Being able to respond to the high school part is also a prerequisite for participants to understand. When the dialogue can be based on empirical data, everyone is willing to work together to find solutions to improve student learning efficiency, and the discussion can follow in-depth and constructive. 
  
@@ -35,7 +37,9 @@ I am very happy that long-distance living has not diminished everyone's enthusia
  
 Colorful exchanges of opinions, from the implementation of flexible use of non-learning periods, spot checks for irregularities, to the review of the twelve-year syllabus, and the return to democratic procedures in each school. Students should be asked to work together to meet the needs of the school. Work and rest. The online software's message board was also active in the conference. The students even set up an "offline discussion forum" on the message board because they did not agree with each other's opinions, inviting each other to continue discussions on LINE and Facebook. 
 
-/assets/imgs/c0194a319af8af0b34f25ba0c700e61bf2a8b906.jpeg
-Picture 3: The online meeting room of the public hearing on August 19th class time
+<figure>
+  <img src="/assets/imgs/c0194a319af8af0b34f25ba0c700e61bf2a8b906.jpeg">
+  <figcaption>The online meeting room of the public hearing on August 19th class time</figcaption>
+</figure>
 
 Preliminary preparations, live broadcast and subsequent verbatim records of the public hearing, provided The National Education Administration was able to improve the nutrients for attention; all the participants worked together to add fuelwood to the open government. At the moment when some countries restrict students' right to choose by controlling online game companies, we are discussing how to allow students to have more room for self-management. Like the teachers and parents who spoke on the same day, I would like to express the deepest affirmation for the students' high degree of enthusiasm for investing in public issues. 
