--- a/_i18n/zh-TW/_posts/2021-09-07-風傳媒：時間管理也是一種自主學習.md
+++ b/_i18n/zh-TW/_posts/2021-09-07-風傳媒：時間管理也是一種自主學習.md
@@ -23,8 +23,10 @@ tags:
  
 以此為基礎，國教署請國衛院幫忙，從實證資料說明青少年的睡眠成因與影響。國衛院的簡報呈現兩大重點：1.青少年和成年人的睡眠建議量，確實不同。14歲至17歲青少年的建議量為8-10小時，18歲至64歲則降為7-9小時。2.青少年受「睡眠週期延後」的生理因素影響，會有夜間清醒、日間嗜睡的狀態，是正常的。這表示，在討論議題時，如果我們說學生早上起不來就是偷懶，晚睡就是愛玩，便不盡公允。
 
-/assets/imgs/5f33aa5426fc726f7ed98217ff4d08f3b3ea0b93.jpeg
-青少年睡眠延遲示意圖（取自：國衛院簡報）
+<figure>
+  <img src="/assets/imgs/5f33aa5426fc726f7ed98217ff4d08f3b3ea0b93.jpeg">
+  <figcaption>青少年睡眠延遲示意圖（取自：國衛院簡報）</figcaption>
+</figure>
 
 此外，國中的主管機關是地方政府，國教署本於權責，只能就高中部分給予回應，這也是參與者須瞭解的前提。當對話可建立在實證資料上，大家願意一起為提升學生學習效率找解法，討論便能隨之深入、具建設性。
  
@@ -34,7 +36,9 @@ tags:
  
 繽紛的意見交流，大家從非學習節數彈性運用的落實、違規抽查，到十二年課綱的檢討，以及回歸各校內民主程序，應該找學生共同制定更貼近需求的到校作息。線上軟體的留言板在會議中同樣活躍，學生們甚至因為不認同彼此的意見，索性在留言板上另闢「線下交流討論區」，互邀彼此到LINE和Facebook繼續討論。
 
-/assets/imgs/c0194a319af8af0b34f25ba0c700e61bf2a8b906.jpeg
-圖三：8月19日上課時間公聽會線上會議室
+<figure>
+  <img src="/assets/imgs/c0194a319af8af0b34f25ba0c700e61bf2a8b906.jpeg">
+  <figcaption>8月19日上課時間公聽會線上會議室</figcaption>
+</figure>
 
 公聽會的前期籌備、現場直播和之後的逐字紀錄，提供國教署得以完善注意事項的養分；所有的參與者們，則是攜手為開放政府添加了薪柴。當有些國家，透過管控網遊企業來限縮學生選擇權的此刻，我們正在討論如何讓學生有更大的自主管理空間。我和當天發言的教師及家長一樣，要為學生們投入公共議題的高度熱忱，致上最深的肯定。
