--- a/_i18n/en/_posts/2021-09-07-風傳媒：時間管理也是一種自主學習.md
+++ b/_i18n/en/_posts/2021-09-07-風傳媒：時間管理也是一種自主學習.md
@@ -1,14 +1,14 @@
 ---
   layout: "post"
-  title: "Feng Media Tang Feng Column: Time management is also a kind of independent learning"
-  excerpt: "During the epidemic, hundreds of students used video conferencing to continue to care about public issues"
+  title: "Time management is also a kind of independent learning"
+  excerpt: "During the epidemic, hundreds of students used video conferencing to continue to care about public issues."
   image: "/assets/imgs/5df69fad3ded3d72a09f71b8edf2d97a9a22f5f2.jpeg"
-  author: "唐鳳、詹壹雯"
+  author: "Audrey Tang, Yi-Wen Chan"
   category: "blog"
   tags: 
-    - "開放政府"
-    - "政策溝通"
-    - "青年事務"
+    - "Open Government"
+    - "Policy Communication"
+    - "Youth Empowerment"
 ---
 
 
