--- a/_posts/2021-09-07-風傳媒：時間管理也是一種自主學習.md
+++ b/_posts/2021-09-07-風傳媒：時間管理也是一種自主學習.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: 風傳媒 唐鳳專欄：時間管理也是一種自主學習
-excerpt: 疫情期間，上百位學生運用視訊會議，持續關心公共議題
+title: 時間管理也是一種自主學習
+excerpt: 疫情期間，上百位學生運用視訊會議，持續關心公共議題。
 image: /assets/imgs/5df69fad3ded3d72a09f71b8edf2d97a9a22f5f2.jpeg
 author: 唐鳳、詹壹雯
 category: blog
@@ -11,17 +11,17 @@ tags:
   - 青年事務
 ---
 
-8月份，全台的國高中生，因為疫情而度過了一個最長的暑假。同時間，受到各界關注的「國高中上課時間」公聽會，在超過上百位學生的線上參與中，完成了初步的意見蒐集。
+8 月份，全台的國高中生，因為疫情而度過了一個最長的暑假。同時間，受到各界關注的「國高中上課時間」公聽會，在超過上百位學生的線上參與中，完成了初步的意見蒐集。
  
-這場「教育部主管高級中等學校學生在校作息時間規劃注意事項執行現況」公聽會暨開放政府第87次協作會議，源自去年12月一位國中生在公共政策網路參與平台（下稱JOIN平台）的提案，「國高中上課時間改為09：30到05：00」，希望能延後到校上課的時間。其實，早在2016年，就有高中生在JOIN平台提出「目前臺灣高中生普遍睡眠不足，高中生上學時間應延遲」的提案。當時，教育部廣納各界意見後，針對學習節數和非學習節數的定義建立規範，前述「注意事項」隨之誕生。五年後，學生再度登高一呼，正好讓制度有被討論、檢視的機會。
+這場「教育部主管高級中等學校學生在校作息時間規劃注意事項執行現況」公聽會暨開放政府第 87 次協作會議，源自去年 12 月一位國中生在公共政策網路參與平台（下稱 JOIN 平台）的提案，「國高中上課時間改為 09：30 到 05：00」，希望能延後到校上課的時間。其實，早在 2016 年，就有高中生在 JOIN 平台提出「目前臺灣高中生普遍睡眠不足，高中生上學時間應延遲」的提案。當時，教育部廣納各界意見後，針對學習節數和非學習節數的定義建立規範，前述「注意事項」隨之誕生。五年後，學生再度登高一呼，正好讓制度有被討論、檢視的機會。
  
-「讓學生學習管理自己的時間，不正是讓學生『自主學習』的體現嗎？」有家長在會上力挺提案。但也有NGO發布網路問卷調查結果，僅有18%的家長表示認同。
+「讓學生學習管理自己的時間，不正是讓學生『自主學習』的體現嗎？」有家長在會上力挺提案。但也有 NGO 發布網路問卷調查結果，僅有 18% 的家長表示認同。
 反對的說法，包括家長接送不便、補習風氣盛行學生更晚回家、課綱內容教不完、延後上課學生只會更晚睡、學生自己無法管理時間……等，部分媒體的網路調查結果，與我們在會前的意見盤點，並無二致。
 
 我們協助國教署啟動協作會議的籌備時，首先任務就是要整理出不同立場的人，各自會有哪些支持和反對的理由。如此才能進一步得知，可以邀請誰來參與，以確保意見多元性。 
 然而，協作會議必須更進一步，追問「核心問題」。即便大家各有本位、看法不同，但是否存在一個不同立場的人都認同的基本共識，或至少是無可否認的底線呢？舉例來說，所有人都不反對「讓學生的學習效率更好」，這就可以是核心問題。
  
-以此為基礎，國教署請國衛院幫忙，從實證資料說明青少年的睡眠成因與影響。國衛院的簡報呈現兩大重點：1.青少年和成年人的睡眠建議量，確實不同。14歲至17歲青少年的建議量為8-10小時，18歲至64歲則降為7-9小時。2.青少年受「睡眠週期延後」的生理因素影響，會有夜間清醒、日間嗜睡的狀態，是正常的。這表示，在討論議題時，如果我們說學生早上起不來就是偷懶，晚睡就是愛玩，便不盡公允。
+以此為基礎，國教署請國衛院幫忙，從實證資料說明青少年的睡眠成因與影響。國衛院的簡報呈現兩大重點：1. 青少年和成年人的睡眠建議量，確實不同。14 歲至 17 歲青少年的建議量為 8-10 小時，18 歲至 64 歲則降為 7-9 小時。2. 青少年受「睡眠週期延後」的生理因素影響，會有夜間清醒、日間嗜睡的狀態，是正常的。這表示，在討論議題時，如果我們說學生早上起不來就是偷懶，晚睡就是愛玩，便不盡公允。
 
 
 <figure>
@@ -31,15 +31,15 @@ tags:
 
 此外，國中的主管機關是地方政府，國教署本於權責，只能就高中部分給予回應，這也是參與者須瞭解的前提。當對話可建立在實證資料上，大家願意一起為提升學生學習效率找解法，討論便能隨之深入、具建設性。
  
-原訂南、北各辦一場的公聽會，因應防疫政策改為線上辦理。疫情下的收穫，就是大家的資訊能力明顯提升。仰賴國教署費心地安排細節，以及各界的高度參與，國教署的線上公聽會，除擴大參與人數外，會議流程也非常順暢。兩場公聽會，線上參與者有6成是學生，還包括管轄國中的地方政府代表、家長、教師及相關團體。觀看直播的民眾，則分別有165人和360人左右。
+原訂南、北各辦一場的公聽會，因應防疫政策改為線上辦理。疫情下的收穫，就是大家的資訊能力明顯提升。仰賴國教署費心地安排細節，以及各界的高度參與，國教署的線上公聽會，除擴大參與人數外，會議流程也非常順暢。兩場公聽會，線上參與者有 6 成是學生，還包括管轄國中的地方政府代表、家長、教師及相關團體。觀看直播的民眾，則分別有 165 人和 360 人左右。
  
-我很開心，遠距生活並沒有淡化大家對於公共事務的熱情。我更看見學生們做足準備，在每人3分鐘的發言時間內，個個論理鏗鏘。有同學說，到校時間不是重點，首先主張廢除朝會，因為學校要佈達任何訊息，可以透過班導、網站，或社群軟體，並非實體集合才有效。也有人說，訴求晚到校不是想偷懶，而是家住偏遠，交通時間很長，長期睡不飽學習也大打折扣。反對的意見則認為，只要夠自律，學校規定幾點上課都要可以配合。
+我很開心，遠距生活並沒有淡化大家對於公共事務的熱情。我更看見學生們做足準備，在每人 3 分鐘的發言時間內，個個論理鏗鏘。有同學說，到校時間不是重點，首先主張廢除朝會，因為學校要佈達任何訊息，可以透過班導、網站，或社群軟體，並非實體集合才有效。也有人說，訴求晚到校不是想偷懶，而是家住偏遠，交通時間很長，長期睡不飽學習也大打折扣。反對的意見則認為，只要夠自律，學校規定幾點上課都要可以配合。
  
-繽紛的意見交流，大家從非學習節數彈性運用的落實、違規抽查，到十二年課綱的檢討，以及回歸各校內民主程序，應該找學生共同制定更貼近需求的到校作息。線上軟體的留言板在會議中同樣活躍，學生們甚至因為不認同彼此的意見，索性在留言板上另闢「線下交流討論區」，互邀彼此到LINE和Facebook繼續討論。
+繽紛的意見交流，大家從非學習節數彈性運用的落實、違規抽查，到十二年課綱的檢討，以及回歸各校內民主程序，應該找學生共同制定更貼近需求的到校作息。線上軟體的留言板在會議中同樣活躍，學生們甚至因為不認同彼此的意見，索性在留言板上另闢「線下交流討論區」，互邀彼此到 LINE 和 Facebook 繼續討論。
 
 <figure>
   <img src="/assets/imgs/c0194a319af8af0b34f25ba0c700e61bf2a8b906.jpeg">
-  <figcaption>8月19日上課時間公聽會線上會議室</figcaption>
+  <figcaption>8 月 19 日上課時間公聽會線上會議室</figcaption>
 </figure>
 
 公聽會的前期籌備、現場直播和之後的逐字紀錄，提供國教署得以完善注意事項的養分；所有的參與者們，則是攜手為開放政府添加了薪柴。當有些國家，透過管控網遊企業來限縮學生選擇權的此刻，我們正在討論如何讓學生有更大的自主管理空間。我和當天發言的教師及家長一樣，要為學生們投入公共議題的高度熱忱，致上最深的肯定。
