--- a/_i18n/en/_posts/2021-09-07-風傳媒：時間管理也是一種自主學習.md
+++ b/_i18n/en/_posts/2021-09-07-風傳媒：時間管理也是一種自主學習.md
@@ -22,7 +22,12 @@ The objections include the inconvenience of parents to pick up and drop off, the
 When we assisted the National Education Administration to start the preparations for the collaborative meeting, the first task was to sort out people with different positions and what reasons they would support and oppose. Only in this way can we learn more about who can be invited to participate in order to ensure the diversity of opinions. 
 However, the collaborative meeting must go one step further and ask the "core questions". Even if everyone has their own standards and views, is there a basic consensus that people with different positions agree with, or at least an undeniable bottom line? For example, no one is opposed to "making students more efficient in learning", which can be the core issue. 
  
-Based on this, the National Education Department asked the National Health Institute for help to explain the causes and effects of adolescents’ sleep based on empirical data. The briefing of the National Health Institute presents two main points: 1. The recommended amount of sleep for adolescents and adults is indeed different. The recommended amount for adolescents from 14 to 17 years old is 8-10 hours, and for 18 to 64 years old, it is reduced to 7-9 hours. 2. It is normal for adolescents to be awake at night and sleepy during the day due to the physiological factors of "delayed sleep cycle". This means that when discussing issues, if we say that students are lazy if they can't wake up in the morning, and that they love to go to bed late, it is not fair. 
+Based on this, the National Education Department asked the National Health Institute for help to explain the causes and effects of adolescents’ sleep based on empirical data. The briefing of the National Health Institute presents two main points:
+
+1. The recommended amount of sleep for adolescents and adults is indeed different. The recommended amount for adolescents from 14 to 17 years old is 8-10 hours, and for 18 to 64 years old, it is reduced to 7-9 hours.
+2. It is normal for adolescents to be awake at night and sleepy during the day due to the physiological factors of "delayed sleep cycle".
+
+This means that when discussing issues, if we say that students are lazy if they can't wake up in the morning, and that they love to go to bed late, it is not fair. 
 
 <figure>
   <img src="/assets/imgs/5f33aa5426fc726f7ed98217ff4d08f3b3ea0b93.jpeg">
