--- a/_i18n/zh-TW/_posts/2021-09-07-風傳媒：時間管理也是一種自主學習.md
+++ b/_i18n/zh-TW/_posts/2021-09-07-風傳媒：時間管理也是一種自主學習.md
@@ -21,7 +21,12 @@ tags:
 我們協助國教署啟動協作會議的籌備時，首先任務就是要整理出不同立場的人，各自會有哪些支持和反對的理由。如此才能進一步得知，可以邀請誰來參與，以確保意見多元性。 
 然而，協作會議必須更進一步，追問「核心問題」。即便大家各有本位、看法不同，但是否存在一個不同立場的人都認同的基本共識，或至少是無可否認的底線呢？舉例來說，所有人都不反對「讓學生的學習效率更好」，這就可以是核心問題。
  
-以此為基礎，國教署請國衛院幫忙，從實證資料說明青少年的睡眠成因與影響。國衛院的簡報呈現兩大重點：1. 青少年和成年人的睡眠建議量，確實不同。14 歲至 17 歲青少年的建議量為 8-10 小時，18 歲至 64 歲則降為 7-9 小時。2. 青少年受「睡眠週期延後」的生理因素影響，會有夜間清醒、日間嗜睡的狀態，是正常的。這表示，在討論議題時，如果我們說學生早上起不來就是偷懶，晚睡就是愛玩，便不盡公允。
+以此為基礎，國教署請國衛院幫忙，從實證資料說明青少年的睡眠成因與影響。國衛院的簡報呈現兩大重點：
+
+1. 青少年和成年人的睡眠建議量，確實不同。14 歲至 17 歲青少年的建議量為 8-10 小時，18 歲至 64 歲則降為 7-9 小時。
+2. 青少年受「睡眠週期延後」的生理因素影響，會有夜間清醒、日間嗜睡的狀態，是正常的。
+
+這表示，在討論議題時，如果我們說學生早上起不來就是偷懶，晚睡就是愛玩，便不盡公允。
 
 
 <figure>
