--- a/_i18n/en/_posts/2021-08-21-智慧國家-創新-包容-永續.md
+++ b/_i18n/en/_posts/2021-08-21-智慧國家-創新-包容-永續.md
@@ -1,6 +1,6 @@
 ---
   layout: "post"
-  title: "Smart Nation: Innovation, Inclusion, Sustainability"
+  title: "Smart Taiwan: Innovation, Inclusion, Sustainability"
   excerpt: "The emphasis is on alignment and accountability, whereby good ideas are taken seriously."
   image: "/assets/imgs/sustainability-3300869_1280.jpg"
   author: "Audrey Tang"
@@ -16,9 +16,9 @@ Or, I should say, “Faster! Higher! Stronger! Together!”, after the Internati
 
 The same motto applies to the field of digital development. In the past, to strive for “faster, higher, and stronger” tech, many countries did their utmost to offer the most advanced facilities and services, to develop the most cutting-edge technologies, and to nurture high-tech “unicorns.” But more and more countries are finding that digital governance policies and promotion strategies are, like the Olympic spirit, not just about nurturing medalists, but also about bringing people together.
 
-President Tsai announced the platform of “Digital Nation, Smart Island” during her election campaign, and the Executive Yuan in 2017 launched the Digital Nation and Innovative Economic Development Program (DIGI⁺). After her successful re-election, it was upgraded to the Smart Nation Program this year, with the vision of a smart nation for innovation, inclusion, and sustainability by 2030.
+President Tsai announced the platform of “Digital Nation, Smart Island” during her election campaign, and the Executive Yuan in 2017 launched the Digital Nation and Innovative Economic Development Program (DIGI⁺). After her successful re-election, it was upgraded to “Smart Taiwan 2030” this year, with the vision of a smart nation for innovation, inclusion, and sustainability by 2030.
 
-The vision of Smart Nation 2030 reveals a new direction for digital governance policy. Any innovation in a modern world must be pluralistic and inclusive, with sustainable development as its goal. This means that it is no longer the case that the government is formulating policies from the top down — dictating new development paths for industries and directing people to new public services — but rather is receptive to building ecosystems of people-public-private partnerships to address problems, guided by the needs of the people.
+The vision of Smart Taiwan 2030 reveals a new direction for digital governance policy. Any innovation in a modern world must be pluralistic and inclusive, with sustainable development as its goal. This means that it is no longer the case that the government is formulating policies from the top down — dictating new development paths for industries and directing people to new public services — but rather is receptive to building ecosystems of people-public-private partnerships to address problems, guided by the needs of the people.
 
 Some people may wonder how to cater to the needs of members of the public in our diverse and rapidly evolving society and whether problems may arise as some issues are prioritized over others, but if we look back at the history of digital development, we can see that the internet was not created by an international organization or country setting standards and then building a system for people to use, but by people of all stripes, scattered around the world, working together to establish a network that connects people to each other. On this shared system, they engaged in an iterative problem-solving process of inventing protocols according to their own needs, before gradually forming the internet as we now know it, which is now indispensable for social, economic, and political activity in every corner of the world, and in a constant state of evolution as the needs of its users change.
 
