--- a/_i18n/en/_posts/2021-09-16-冷系統-暖服務.md
+++ b/_i18n/en/_posts/2021-09-16-冷系統-暖服務.md
@@ -1,32 +1,31 @@
 ---
   layout: "post"
-  title: "Cooling system, heating service"
+  title: "Cool system, heartwarming service"
   excerpt: "For each specific suggestion, we carefully evaluate and adjust to make the vaccination process smoother."
   image: "/assets/imgs/coffee-1974841_1280.jpg"
-  author: "唐鳳、彭美琪"
+  author: "Audrey Tang, Mickey Peng"
   category: "blog"
   tags: []
 ---
 
+With the international rush and the geopolitical situation, every vaccine in Taiwan is hard to come by. Unlike previous years' vaccinations, this time we not only had to consider the public's acceptance of each brand, willingness to administer, timing, and location, but also had to evaluate the best overall vaccination layout with the timing, quantity, and brand of vaccines arriving.
 
-International rush to buy and geopolitical situation, every vaccine in Taiwan is hard to come by. Unlike previous vaccinations, this time we not only need to consider the public’s acceptance, willingness, time, and location of each label, but also evaluate the time, quantity, and brand of vaccines that are most conducive to the overall epidemic prevention. layout. 
+The "1922 Vaccine Registration and Appointment Platform", which was launched in July, was created with such complex considerations in mind. Unlike the flu vaccine, which can be administered in the order of the household registration, the platform must consider the vaccine type, quantity, and brand, as well as the public's acceptance of the vaccine brand, their willingness to receive the vaccine, the time and place of administration, in order to accurately and effectively dispense the vaccine.
 
-The "1922 Vaccine Registration and Appointment Platform" launched in July was built with such complex considerations. Different from influenza vaccine, it is better to plan and order the vaccines according to the household registration. The platform must be based on the type, quantity, and brand of the vaccine. At the same time, the public’s acceptance of the vaccine brand, the willingness to administer the vaccine, the time and location of the vaccine must be considered. Can be accurately and effectively allotted. 
+The platform is designed to seamlessly connect the demand side and the supply side so that each precious vaccine can be administered in the shortest possible time. Therefore, in the planning of the system, we focus on a few core principles:
 
-The design framework of the platform is to seamlessly connect the demand side and the supply side, so that each precious vaccine can be vaccinated in the shortest time. Therefore, when planning the system, we pay special attention to a few core principles: 
+- First, we must strive to meet the needs of local governments in terms of implementation. In order to avoid conflicting needs among local governments, we should have many conversations and reach a consensus with local governments beforehand.
+- Second, the public should be able to fully express their wishes on the vaccine brand, time and location, and more importantly, maintain the room for adjustment at any time with the arrival of different brands.
+- Finally, for people who work, live and are domiciled in different places, it is important to avoid the risk of contracting the vaccine by traveling from one place to another.
 
-- First of all, we must try our best to meet the implementation needs of local governments. In order to avoid conflicts between the needs of local governments, we must have multiple dialogues with local governments beforehand. , Reach a consensus. 
-- Secondly, the public must be able to fully express their wishes for vaccine brands, time and location, and more importantly, keep room for adjustment at any time as different brands arrive. 
-- In addition, for people with different places of work, residence, and household registration, it is even more important to avoid the risk of infection caused by the travel between the north and the south due to vaccination. 
+It was a challenge to reconcile these principles. Fortunately, the local government was able to do its best to notify the public and successfully complete its mission, using telephone appointments, walk-in registrations, and village and neighborhood leaders to assist people in making appointments.
 
-How to balance these principles is indeed a challenge. Fortunately, the local government has fully mobilized and cooperated with measures such as telephone appointments, registration at the counter, and village and neighborhood chief officers to assist the people in making appointments, etc., to notify the people as much as they can and successfully complete the mission. 
+As the arrival of vaccines became more stable, the Central Epidemic Command Center began to expand the target population for vaccination, opening up the vaccination to foreigners who are legally resident but do not have a health insurance card, and also planning to gradually open up the vaccination to adolescents under the age of 18 and those who have a household registration but no health insurance status.
 
-As the volume of vaccine arrivals becomes more and more stable, the Central Epidemic Command Center has begun to expand the scope of vaccinations, opening legal suspensions, residences but without health insurance cards for vaccinations for foreigners, and plans to gradually open them to those under the age of 18 Teenagers, as well as those with household registration without health insurance status. 
+Under this policy, the data flow of the system is integrated into the inter-agency data of the Ministry of Foreign Affairs, the Immigration Department, and the Ministry of the Interior, and for the first time is consolidated into a single window with a single ID number, passport number, and entry/exit permit number. Daily statistics are also made available as [open data](https://data.cdc.gov.tw/dataset/covid-19-vaccine-booking-waiting-counts) for immediate reference.
 
-Under this policy, the system data stream incorporates cross-organization data such as the Ministry of Foreign Affairs, the Department of Immigration, and the Ministry of the Interior, and is integrated into a single window for the first time, using a unified certificate number, passport number, and entry and exit permit number to log in. Daily statistics are also used in the form of [Open Information](https://data.cdc.gov.tw/dataset/covid-19-vaccine-booking-waiting-counts) for immediate reference from all walks of life. 
+We are pleased that local health bureaus and civil affairs bureaus have responded that the system has shown significant improvement over door-to-door notification system the past. Not only can we avoid inadvertent mix-ups, but we can also accurately deploy manpower and materials at the vaccination stations, so that the original 40-50% vaccination rate at the vaccination stations can be greatly increased to over 90%.
 
-What makes us happy is that the local health bureaus and civil affairs bureaus have responded one after another that the system on the road can indeed improve the time and manpower of sending notifications from door to door when vaccines were administered in the past. Not only can it avoid accidental mixing, but it can also accurately deploy the manpower and material resources of the firing station, so that the original vaccination rate of about 40-50% at the firing station has been greatly increased to more than 90%. 
+It cannot be denied that in practice, the central government continues to receive feedback from front-line colleagues in local governments about the need to make repeated appointments for people who have already received their first dose before the system goes online, and the time and effort required to compile the registry, etc. Many people have also commented that it is not easy to understand their wishes to register and make vaccine appointments, and have suggested ideas for improvement. For each specific suggestion, we carefully evaluate and adjust to make the vaccination process smoother.
 
-It is undeniable that in the actual situation, the central government has continued to receive responses from the frontline colleagues of local governments. In the face of people who have received the first dose before the system goes online, they need to make repeated appointments and it takes time and effort to compile the roster. The problem: Many people have reported that it is not easy to understand the willingness to register and make appointments for vaccines, and they have put forward ideas for improvement. For each specific suggestion, we carefully evaluate and adjust to make the vaccination process smoother. 
-
-The cold and hard system, due to the execution of people, we also receive heart-warming responses. For example, many children actively assist their parents to register online, make appointments, and string together family links. This has also become a topic that is not often discussed between parents and children. . Although the epidemic forces us to restrict our environment, it also allows us to see and cherish our relatives and friends around us again. I look forward to the joint efforts of all walks of life, the epidemic will be brought under control soon, so that everyone can resume normal activities, face to face chats, have dinner together, and enjoy the happiness of interpersonal relationships. 
+We also receive heartwarming responses from the feedbacks, for example from young people who took the initiative to help their parents register and make appointments online, creating a family bond and becoming a topic of conversation between parents and children. Although the epidemic has forced us to restrict our environment, it has also allowed us to see and cherish our friends and family again. We hope that with the concerted efforts of all sectors, the epidemic will be brought under control soon, so that we can resume social activities and enjoy the happiness of human relationships by chatting and dining together.
