--- a/_i18n/en/_posts/2021-09-27-疫後振興-人人有ㄗㄜˊ.md
+++ b/_i18n/en/_posts/2021-09-27-疫後振興-人人有ㄗㄜˊ.md
@@ -3,10 +3,10 @@
   title: "A chosen future: Stimulating the post-pandemic bounceback"
   excerpt: "“Quintuple Stimulus Voucher” is another shining example of Taiwan finding flexible approaches for spurring the post-pandemic economic bounceback"
   image: "/assets/imgs/article-615133ce59d06.jpg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "社會創新"
+    - "Social Innovation"
 ---
 
 Since Taiwan raised its national pandemic alert in May, consumption patterns have undergone tremendous change. As physical channels and on-site activities are constrained, finding ways to create new opportunities for products and services are the top priority in all sectors of the economy.
