--- a/_i18n/en/_posts/2021-09-27-疫後振興-人人有ㄗㄜˊ.md
+++ b/_i18n/en/_posts/2021-09-27-疫後振興-人人有ㄗㄜˊ.md
@@ -1,7 +1,7 @@
 ---
   layout: "post"
-  title: "A chosen future: Stimulating the post-pandemic bounceback."
-  excerpt: "“Quintuple Stimulus Voucher” is another shining example of Taiwan finding flexible approaches for spurring the post-pandemic economic bounceback"
+  title: "A chosen future: Stimulating the post-pandemic bounceback"
+  excerpt: "“Quintuple Stimulus Voucher” is another shining example of Taiwan finding flexible approaches for spurring the post-pandemic economic bounceback."
   image: "/assets/imgs/article-615133ce59d06.jpg"
   author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
